--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ h1,
 h2,
 h3 {
   margin: 0.5rem 0;
+  color:black;
 }
 h1 {
   font-size: 1.5rem;
@@ -17,6 +18,9 @@ h3 {
 }
 a {
   text-decoration: none;
+  color:black;
+  display: inline-block;
+  margin-left: 10px;
 }
 .row {
   display: flex;
@@ -31,8 +35,14 @@ a {
 .col-2 {
   flex: 2;
 }
+.total .col-2 {
+  text-align:left;
+}
+.item-name{
+  text-align:left;
+}
 .block {
-  background-color: #e0e0e0;
+  background-color: #b4e9eb;
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
